cmake_minimum_required(VERSION 3.0.0)
project(snaze VERSION 0.1.0)

### Execut치vel
# Diret칩rio contendo os .h
include_directories( include )

# Cria um execut치vel com nome "snaze", adiciona neste execut치vel os arquivos .cpp
add_executable(snaze src/Snaze.cpp
                     src/SnakeGame.cpp
                     src/Level.cpp
                     src/Snake.cpp
                     src/Player.cpp)
